--- a/src/main/resources/templates/admin/edit-product.html
+++ b/src/main/resources/templates/admin/edit-product.html
@@ -28,8 +28,8 @@
     </head>
     <body>
 
-		<th:block th:insert="/admin/_topbar"></th:block>
-		<th:block th:insert="/admin/_nav"></th:block>
+		<th:block th:insert="admin/_topbar"></th:block>
+		<th:block th:insert="admin/_nav"></th:block>
 
         
         <!-- ============================================================== -->
@@ -104,9 +104,16 @@
 
                                         <div class="form-group col-md-6">
                                             <div class="form-group">
-                                                <label>Ngày tạo</label>
-                                                <input type="date" th:value="${product.createdDate}"
-                                                  class="form-control form-control-rounded col-md-8" readonly>
+                                                <label>Thời gian tạo</label>
+                                                <input type="datetime-local" th:value="${product.createdTime}"
+                                                  class="form-control form-control-rounded col-md-12" readonly>
+                                            </div>
+                                        </div>
+                                        <div class="form-group col-md-6">
+                                            <div class="form-group">
+                                                <label>Cập nhật lần cuối</label>
+                                                <input type="datetime-local" th:value="${product.updatedTime}"
+                                                  class="form-control form-control-rounded col-md-12" readonly>
                                             </div>
                                         </div>
                                     </div>
