--- a/src/main/resources/templates/shop/product-detail.html
+++ b/src/main/resources/templates/shop/product-detail.html
@@ -33,7 +33,7 @@
         <div class="loader"></div>
     </div> -->
 
-    <th:block th:insert="/shop/_header"></th:block>
+    <th:block th:insert="shop/_header"></th:block>
 
     <!-- Breadcrumb Begin -->
     <div class="breadcrumb-option">
@@ -196,8 +196,8 @@
     </section>
     <!-- Product Details Section End -->
 
-    <th:block th:insert="/shop/_insta"></th:block>
-    <th:block th:insert="/shop/_footer"></th:block>
+    <th:block th:insert="shop/_insta"></th:block>
+    <th:block th:insert="shop/_footer"></th:block>
 
 <!-- Js Plugins -->
 <script src="/shop-assets/js/jquery-3.3.1.min.js"></script>
