--- a/src/main/resources/static/shop-assets/css/style.css
+++ b/src/main/resources/static/shop-assets/css/style.css
@@ -1602,6 +1602,12 @@ ol {
 	font-weight: 600;
 }
 
+.pagination__option a.active {
+	background: #666666;
+	border-color: #666666;
+	color: #ffffff;
+}
+
 .pagination__option a:hover {
 	background: #0d0d0d;
 	border-color: #0d0d0d;
