--- a/src/main/resources/templates/admin/add-user.html
+++ b/src/main/resources/templates/admin/add-user.html
@@ -28,8 +28,8 @@
     </head>
     <body>
 
-		<th:block th:insert="/admin/_topbar"></th:block>
-		<th:block th:insert="/admin/_nav"></th:block>
+		<th:block th:insert="admin/_topbar"></th:block>
+		<th:block th:insert="admin/_nav"></th:block>
 
         
         <!-- ============================================================== -->
@@ -43,6 +43,10 @@
         <div class="alert bg-danger alert-dismissible " role="alert" th:if="${message != null }"> 
             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button> 
              <span th:text="${message}"></span>
+        </div>
+        <div class="alert bg-success alert-dismissible " role="alert" th:if="${success != null }"> 
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button> 
+             <span th:text="${success}"></span>
         </div>
 
           <div class="row">
@@ -96,7 +100,7 @@
                                     <div class="form-group">
                                         <label>Địa chỉ</label>
                                         <input type="text"  th:field="*{address}"
-                                          placeholder="Số điện thoại" class="form-control">
+                                          placeholder="Địa chỉ" class="form-control">
                                     </div>
                                     <div class="form-group">
                                         <label>Loại tài khoản *</label>
