--- a/src/main/resources/templates/shop/shop.html
+++ b/src/main/resources/templates/shop/shop.html
@@ -34,7 +34,7 @@
         <div class="loader"></div>
     </div> -->
 
-    <th:block th:insert="/shop/_header"></th:block>
+    <th:block th:insert="shop/_header"></th:block>
 
     <!-- Breadcrumb Begin -->
     <div class="breadcrumb-option">
@@ -139,7 +139,7 @@
                 </div>
                 <div class="col-lg-9 col-md-9">
                     <div class="row">
-                        <div class="col-lg-4 col-md-6" th:each="product : ${products}">
+                        <div class="col-lg-4 col-md-6" th:each="product : ${page.content}">
                             <div class="product__item">
                                 <div class="product__item__pic set-bg" th:data-setbg="${product.image}">
                                     <div class="label new">New</div>
@@ -163,14 +163,30 @@
                             </div>
                         </div>
                         
-                        <!-- <div class="col-lg-12 text-center">
+                        <div class="col-lg-12 text-center" th:if="${ #request.requestURI != '/search'}">
                             <div class="pagination__option">
-                                <a href="#">1</a>
-                                <a href="#">2</a>
-                                <a href="#">3</a>
-                                <a href="#"><i class="fa fa-angle-right"></i></a>
+                                <!-- <a href="#"><i class="fa fa-angle-left"></i></a> -->
+
+                                <a th:each="i : ${#numbers.sequence(0, page.totalPages -1)}" th:text="${i +1}"
+                                    th:href="${#request.requestURI} + '?page=' + ${i} " 
+                                    th:class="${page.number == i } ? 'active'" th:if="${page.totalPages >1}">1</a>
+                                
+                                
+                                <!-- <a href="#"><i class="fa fa-angle-right"></i></a> -->
                             </div>
-                        </div> -->
+                        </div>
+
+                        <div class="col-lg-12 text-center" th:if="${#request.requestURI == '/search'}">
+                            <div class="pagination__option">
+                                <!-- <a href="#"><i class="fa fa-angle-left"></i></a> -->
+
+                                <a th:each="i : ${#numbers.sequence(0, page.totalPages -1)}" th:text="${i +1}"
+                                    th:href="${#request.requestURI} + '?productName=' + ${productName} + '&page=' + ${i} " 
+                                    th:class="${page.number == i } ? 'active'" th:if="${page.totalPages >1}">1</a>
+                                
+                                <!-- <a href="#"><i class="fa fa-angle-right"></i></a> -->
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -179,8 +195,8 @@
     <!-- Shop Section End -->
 
 
-    <th:block th:insert="/shop/_insta"></th:block>
-    <th:block th:insert="/shop/_footer"></th:block>
+    <th:block th:insert="shop/_insta"></th:block>
+    <th:block th:insert="shop/_footer"></th:block>
 
 <!-- Js Plugins -->
 <script src="/shop-assets/js/jquery-3.3.1.min.js"></script>
